--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:title" content="Puls Academy - التعليم الطبي المتخصص">
     <meta name="twitter:description" content="Puls Academy: بوابتك للتفوق في عالم الصيدلة وطب الأسنان. كورسات متخصصة ومحتوى علمي دقيق.">
     <meta name="twitter:image" content="/src/assets/Banner.png">
-    <title>Puls Academy - بوابة التعليم الطبي المتخصصة</title>
+    <title>Pulse Academy - بوابة التعليم الطبي المتخصصة</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   </head>
   <body>
